--- a/app/views/tufts_images/_subnav.html.erb
+++ b/app/views/tufts_images/_subnav.html.erb
@@ -1,6 +1,3 @@
-<ul class="nav nav-pills pull-right">
-  <li><a href="#plugins"><i class="icon-picture"/></i> Download JPG Image</a></li>
-  <li><a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i>  Request Larger
-    Image</a></li>
-
-</ul>
+<div class="span5 pull-right download_links" style="padding-top:5px;  padding-left: 25px;  ">
+  Download:  <a href="#plugins"><i class="icon-picture"/></i> Download image</a> <a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i>Request high-resolution</a>
+</div>
