--- a/app/views/tufts_faculty_publications/_show.html.erb
+++ b/app/views/tufts_faculty_publications/_show.html.erb
@@ -29,7 +29,7 @@
 
 
       <div class="span6">
-        <%= render :partial => 'tufts_faculty_publications/metadata_pane' %>
+        <%= render :partial => 'shared/metadata_pane' %>
       </div>
 
 
