--- a/app/views/tufts_audios/_show.html.erb
+++ b/app/views/tufts_audios/_show.html.erb
@@ -5,120 +5,26 @@
 <% stylesheet_links << "audio/audio.css" %>
 
 
-<% metadata = Tufts::AudioMethods.get_metadata(@document_fedora) %>
+<% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
 
 
-  <div class="row">
-    <div class="span12">
-<%  metadata[:titles].each do |title| %>
-      <h2><%= raw title.text %></h2>
-<%  end %>
-<%  metadata[:creators].each do |creator| %>
-      <%= raw creator.text %><br>
-<%  end %>
-<%  unless metadata[:dates].nil? || metadata[:dates].empty? %>
-<%    metadata[:dates].each do |date| %>
-      <%= raw date.text %><br>
-<%    end %>
-<%  else %>
-<%    metadata[:temporals].each do |temporal| %>
-      <%= raw temporal.text %><br>
-<%    end %>
-<%  end %>
-    </div>  <!-- span12 -->
-  </div>  <!-- row -->
+<div class="row">
+  <div class="span12">
+    <%= render :partial => 'shared/header_elements', :locals => {:metadata => metadata} %>
+  </div>
+  <!-- span12 -->
+</div>  <!-- row -->
 
-  <hr>
+<hr>
 
-  <div class="row">
-    <div class="span6">
-      <%= raw Tufts::AudioMethods.show_audio_player(params[:id]) %><br>
-    </div>  <!-- span6 -->
-
-    <div class="span6">
-<%  unless metadata[:descriptions].empty? %>
-            <p><%= raw Tufts::MetadataMethods.read_more_or_less(metadata[:descriptions].first.text, 400) %></p>
-<%  end %>
-            <dl>
-<%  unless metadata[:creators].empty? %>
-              <dd>Creator</dd>
-<%    metadata[:creators].each do |creator| %>
-              <dt><%= raw creator.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:sources].empty? %>
-              <dd>Source</dd>
-<%    metadata[:sources].each do |source| %>
-              <dt><%= raw source.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:citable_urls].empty? %>
-              <dd>Citable URL</dd>
-<%    metadata[:citable_urls].each do |citable_url| %>
-              <dt><%= raw citable_url.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:citations].empty? %>
-              <dd>Citation</dd>
-<%    metadata[:citations].each do |citation| %>
-              <dt><%= raw citation.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:publishers].empty? %>
-              <dd>Publisher</dd>
-<%    metadata[:publishers].each do |publisher| %>
-              <dt><%= raw publisher.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:types].empty? %>
-              <dd>Type</dd>
-<%    metadata[:types].each do |type| %>
-              <dt><%= raw type.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:formats].empty? %>
-              <dd>Format</dd>
-<%    metadata[:formats].each do |format| %>
-              <dt><%= raw format.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:subjects].empty? %>
-              <dd>Subject</dd>
-<%    metadata[:subjects].each do |subject| %>
-              <dt><%= raw subject.text %></dt>
-<%    end %>
-<%  end %>
-
-<%  unless metadata[:temporals].empty? %>
-              <dd>Temporal</dd>
-<%    metadata[:temporals].each do |temporal| %>
-              <dt><%= raw temporal.text %></dt>
-<%    end %>
-<%  end %>
-            </dl>
-
-            <div class="tooltip-demo well">
-              <table width="100%" border="0" cellspacing="0" cellpadding="0" class="noborder">
-                <tr>
-                  <td width="50">ID:</td>
-                  <td><%= params[:id] %></td>
-                </tr>
-                <tr>
-                  <td>To Cite:</td>
-                  <td><a href="#">DCA Citation Guide</a></td>
-                </tr>
-                <tr>
-                  <td>Usage:</td>
-                  <td><a href="#">Detailed Rights</a></td>
-                </tr>
-              </table>
-            </div>  <!-- tooltip-demo well -->
-    </div>  <!-- span6 -->
-  </div>  <!-- row --> 
+<div class="row">
+  <div class="span6">
+    <%= raw Tufts::AudioMethods.show_audio_player(params[:id]) %>
+    <br>
+  </div>
+  <!-- span6 -->
+  <div class="span6">
+    <%= render :partial => 'shared/metadata_pane', :locals => {:metadata => metadata} %>
+  </div>
+  <!-- span6 -->
+</div>  <!-- row -->
