--- a/app/views/tufts_images/_show.html.erb
+++ b/app/views/tufts_images/_show.html.erb
@@ -1,22 +1,25 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
+<% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
+
+
 <div class="row">
   <div class="span12">
-    <%= show_title() %>
-    <%= show_creator() %>
-    <%= show_date() %>
-    <hr>
-    <div class="row">
-      <div class="span6">
-        <%= render :partial => 'tufts_images/image_pane' %>
-
-      </div>
-
-
-      <div class="span6">
-        <%= render :partial => 'tufts_images/metadata_pane' %>
-      </div>
-
-
-    </div>
+    <%= render :partial => 'shared/header_elements', :locals => {:metadata => metadata} %>
   </div>
+  <!-- span12 -->
+</div>  <!-- row -->
+
+<hr>
+<div class="row">
+  <div class="span6">
+    <%= render :partial => 'tufts_images/image_pane' %>
+
+  </div>
+
+
+  <div class="span6">
+    <%= render :partial => 'shared/metadata_pane', :locals => {:metadata => metadata} %>
+  </div>
+
+
 </div>
