--- a/app/views/tufts_images/_subnav.html.erb
+++ b/app/views/tufts_images/_subnav.html.erb
@@ -1,3 +1,3 @@
-<div class="span5 pull-right download_links" style="padding-top:5px;  padding-left: 25px;  ">
-  Download:  <a href="#plugins"><i class="icon-picture"/></i> Download image</a> <a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i>Request high-resolution</a>
+<div class="span5 download_links pull-right" style="padding-top:5px;  padding-left: 25px;  ">
+  Download:  <a href="#plugins"><i class="icon-picture"/></i> Download image</a> <a href="http://sites.tufts.edu/dca/research-help/image-requests/"><i class="icon-envelope"/></i> Request high-resolution</a>
 </div>
