Changed AudioMethods.get_metadata() to ModelMethods.get_metadata().

--- a/app/views/catalog/transcriptonly.html.erb
+++ b/app/views/catalog/transcriptonly.html.erb
@@ -1,7 +1,7 @@
 <% stylesheet_links << "audio/audio.css" %>
 
 <%
-    metadata = Tufts::AudioMethods.get_metadata(@document_fedora)
+    metadata = Tufts::ModelMethods.get_metadata(@document_fedora)
 
     @page_title = metadata[:titles].first.text + " - " + application_name
 %>
