--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -34,7 +34,7 @@
 
         <div class="tab-content">
           <div class="tab-pane" id="2">
-            <a href="/catalog/transcriptonly/<%= params[:id] %>" class="pull-right"><h6>view transcript only <i class="icon-share"/></h6></a>
+            <a href="/catalog/transcriptonly/<%= params[:id] %>" class="pull-right"><h6>view transcript only <i class="icon-share"/></i></h6></a>
             <br>
             <div class="transcriptbox">
               <%= raw Tufts::AudioMethods.show_transcript(@document_fedora, true) %>
