initial uncomplete work towards more_facets modals

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -39,7 +39,7 @@
           margin-top: 0px;
           margin-bottom: 0px;
           min-height: 400px;
-
+      }
           /*margin-right: 10px;
     margin-left: 10px;/*
             -webkit-border-radius: 0 0 6px 6px;
@@ -176,7 +176,52 @@
   </div>
 </div>
 
+<div class="modal fade" id="more_facets_modal">
+  <div class="modal-header">
+    <button class="close" data-dismiss="modal">×</button>
+    <h3>Send Comment<%= ("show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action) ? " about " + show_title().to_s().strip! : "" %></h3>
+  </div>
+  <div class="modal-body">
+
+    <form class="form-inline comment_form" action="javascript:submitFeedback(<%= raw ("show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action) ? "'http://#{request.host}:#{request.port}#{request.fullpath}'" : "''" %>, '<%= form_authenticity_token %>');">
+
+      <fieldset>
+
+        <div class="control-group">
+          <label class="control-label" for="inputComment">Comment</label>
+
+          <div class="controls">
+            <textarea class="input-xlarge" id="inputComment" rows="3"></textarea>
+          </div>
+        </div>
+
+
+        <div class="control-group">
+          <label for="inputEmail" class="control-label">Email Address (optional):</label>
+
+          <div class="controls">
+            <input type="text" placeholder="" id="inputEmail" class="input-xlarge"/>
+
+            <p class="help-block"></p>
+          </div>
+        </div>
+
+
+        <div class="pull-right" style="margin-right: 16px">
+          <button class="btn btn-primary" type="submit">Send</button>
+          <button class="btn" data-dismiss="modal">Cancel</button>
+        </div>
+      </fieldset>
+    </form>
+
+
+  </div>
+</div>   <!--end modal -->
+
 <script type="text/javascript">
+    //if js is enabled rewrite the more_facets links to be inline modals.
+    $('.more_facets_link').attr('href','#more_facets_modal');
+
     $('.toggle:not(.toggle-close):lt(1)').addClass('toggle-open');//.parents('li').children('ul').hide();
     $('.menutop:not(.toggle-close):lt(1)').addClass('toggle-open');//.parents('li').children('ul').hide();
     $('.toggle:not(.toggle-close):gt(0)').addClass('toggle-closed');//.parents('li').children('ul').hide();
