--- a/public/stylesheets/audio/audio.css
+++ b/public/stylesheets/audio/audio.css
@@ -12,17 +12,17 @@
 
 .participant_id {
   display: table-cell;
-  width: 30px;
+  width: 20px;
   font-weight: bold;
   vertical-align: top;
   padding-right: 2em;
   padding-top: .25em;
   padding-bottom: .25em;
+  font-size: smaller;
 }
 
 .participant_name {
   display: table-cell;
-  width: 150px;
   vertical-align: top;
   padding-right: 2em;
   padding-top: .25em;
@@ -30,22 +30,7 @@
 }
 
 .participant_role {
-  display: table-cell;
-  width: 100px;
   font-style: italic;
-  vertical-align: top;
-  padding-right: 2em;
-  padding-top: .25em;
-  padding-bottom: .25em;
-}
-
-.participant_sex {
-  display: table-cell;
-  width: 15px;
-  vertical-align: top;
-  padding-right: 2em;
-  padding-top: .25em;
-  padding-bottom: .25em;
 }
 
 .transcript_table {
@@ -62,12 +47,13 @@
 
 .transcript_speaker {
   display: table-cell;
-  width: 30px;
+  width: 20px;
   font-weight: bold;
   vertical-align: top;
   padding-right: 2em;
   padding-top: .25em;
   padding-bottom: .25em;
+  font-size: smaller;
 }
 
 .transcript_utterance {
