--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,6 +1,7 @@
 <% javascript_includes << "audio/yahooMediaPlayer.js" %>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "audio/transcript_scroller.js" %>
+<% javascript_includes << "audio/tabs.js" %>
 <% javascript_includes << "read_more_or_less.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
 <% stylesheet_links << "audio/audio.css" %>
@@ -30,22 +31,22 @@
     <div class="span6">
       <div class="tabbable">
         <ul class="nav nav-tabs">
-          <li class="active"><a href="#1" data-toggle="tab">Information</a></li>
-          <li><a href="#2" data-toggle="tab">Transcript</a></li>
+          <li <%= raw params[:tab] != "2" ? " class=\"active\"" : "" %>><a id="tab1" href="/catalog/<%= params[:id] %>?tab=1">Information</a></li>
+          <li <%= raw params[:tab] == "2" ? " class=\"active\"" : "" %>><a id="tab2" href="/catalog/<%= params[:id] %>?tab=2">Transcript</a></li>
         </ul>
 
         <div class="tab-content">
-          <div class="tab-pane" id="2">
+          <div class="tab-pane<%= params[:tab] != "2" ? " active" : "" %>" id="1">
+            <%= render :partial => 'shared/metadata_pane', :locals => {:metadata => metadata} %>
+          </div>  <!-- tab-pane 1 -->
+
+          <div class="tab-pane<%= params[:tab] == "2" ? " active" : "" %>" id="2">
             <a href="/catalog/transcriptonly/<%= params[:id] %>" class="pull-right"><h6>view transcript only <i class="icon-share"/></i></h6></a>
             <br>
             <div class="transcriptbox">
               <%= raw Tufts::AudioMethods.show_transcript(@document_fedora, true) %>
             </div>  <!-- transcriptbox -->
-          </div>  <!-- tab-pane -->
-
-          <div class="tab-pane active" id="1">
-            <%= render :partial => 'shared/metadata_pane', :locals => {:metadata => metadata} %>
-          </div>  <!-- tab-pane -->
+          </div>  <!-- tab-pane 2 -->
         </div>  <!-- tab-content -->
       </div>  <!-- tabbable -->
     </div>  <!-- span6 -->
