Use Yahoo media player hosted on Yahoo's site instead of our copy.  This solves the problem that audio objects without transcript wouldn't play.

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -1,4 +1,4 @@
-<% javascript_includes << "audio/yahooMediaPlayer.js" %>
+<script type="text/javascript" src="http://webplayer.yahooapis.com/player.js"></script>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "audio/transcript_scroller.js" %>
 <% javascript_includes << "audio/tabs.js" %>
