--- a/app/views/tufts_audios/_show.html.erb
+++ b/app/views/tufts_audios/_show.html.erb
@@ -1,4 +1,4 @@
-<% javascript_includes << "audio/yahooMediaPlayer.js" %>
+<script type="text/javascript" src="http://webplayer.yahooapis.com/player.js"></script>
 <% javascript_includes << "audio/audio_player.js" %>
 <% javascript_includes << "read_more_or_less.js" %>
 <% stylesheet_links << "audio/audio_player.css" %>
