new static pages with highlighting left menu

--- a/app/views/about/finding_aids.html.erb
+++ b/app/views/about/finding_aids.html.erb
@@ -6,8 +6,8 @@
   <!-- nested row LEFT -->
   <div class="row-fluid">
 
-    <div class="span3"><p><h6></h6></p>
-
+    <div class="span3">
+      <%= render :partial => 'about/menu' %>
     </div>
 
 
@@ -16,7 +16,7 @@
       <div class="span7">
         <h2>Learn More about Finding Aids</h2>
 
-        <p>A Finding Aid aids in the finding.  More details to follow...</p>
+        <p>A Finding Aid aids in the finding. More details to follow...</p>
 
       </div>
       <div id="breadcrumbdivider">&nbsp;</div>
@@ -38,5 +38,4 @@
 
     </div>
   </div>
-</div>
 </div>
