--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -6,7 +6,8 @@
   <!-- nested row LEFT -->
   <div class="row-fluid">
 
-    <div class="span3"><p><h6></h6></p>
+    <div class="span3">
+      <%= render :partial => 'about/menu' %>
 
     </div>
 
