updated home page collection links

--- a/app/views/dca_text/_collections.html.erb
+++ b/app/views/dca_text/_collections.html.erb
@@ -2,9 +2,9 @@
 <ul class="thumbnails">
         <li class="span25">
           <div class="thumbnail">
-           <a href="#"><img src="/assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
+           <a href="/about/tufts_local_history"><img src="/assets/img/home/aloneintheeast-tuhome.jpg" alt=""></a>
             <div class="caption">
-               <a href="#"><h5>Tufts and local history</h5></a>
+               <a href="/about/tufts_local_history"><h5>Tufts and local history</h5></a>
                  
               
             </div>
@@ -12,45 +12,45 @@
         </li>
 <li class="span25">
           <div class="thumbnail">
-           <a href="#"><img src="/assets/img/home/escholar-tuhome.jpg" alt=""></a>
+           <a href="/about/e_scholarship"><img src="/assets/img/home/escholar-tuhome.jpg" alt=""></a>
             <div class="caption">
-              <a href="#"><h5>E-scholarship</h5></a>
+              <a href="/about/e_scholarship"><h5>E-scholarship</h5></a>
             </div>
           </div>
  </li>
  
  <li class="span25">
           <div class="thumbnail">
-            <a href="#"><img src="/assets/img/home/murrow-tuhome.jpg" alt=""></a>
+            <a href="/about/murrow_collection"><img src="/assets/img/home/murrow-tuhome.jpg" alt=""></a>
             <div class="caption">
-            <a href="#"><h5>Edward R. Murrow collection</h5></a>
+            <a href="/about/murrow_collection"><h5>Edward R. Murrow collection</h5></a>
             </div>
           </div> 
  </li>
       
 <li class="span25">
           <div class="thumbnail">
-            <a href="#"><img src="/assets/img/home/wriston-tuhome.jpg" alt=""></a>
+            <a href="/about/wriston_collection"><img src="/assets/img/home/wriston-tuhome.jpg" alt=""></a>
             <div class="caption">
-              <a href="#"><h5>Walter B. Wriston collection</h5></a>
+              <a href="/about/wriston_collection"><h5>Walter B. Wriston collection</h5></a>
               
             </div>
           </div>
  </li>
  <li class="span25">
           <div class="thumbnail">
-            <a href="#"><img src="/assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
+            <a href="/about/a_new_nation_votes"><img src="/assets/img/home/prussia-tuhome-temp.jpg" alt=""></a>
             <div class="caption">
-             <a href="#"><h5>A new nation votes</h5></a>
+             <a href="/about/a_new_nation_votes"><h5>A new nation votes</h5></a>
               
             </div>
           </div>
  </li>
  <li class="span25">
           <div class="thumbnail">
-            <a href="#"><img src="/assets/img/home/drummers-tuhome.jpg" alt=""></a>
+            <a href="/about/dagomba_dance_drumming"><img src="/assets/img/home/drummers-tuhome.jpg" alt=""></a>
             <div class="caption">
-              <a href="#"><h5>Dagomba Dance Drumming</h5></a>
+              <a href="/about/dagomba_dance_drumming"><h5>Dagomba Dance Drumming</h5></a>
             </div>
           </div> 
  </li>
