--- a/app/views/about/murrow_collection.html.erb
+++ b/app/views/about/murrow_collection.html.erb
@@ -7,14 +7,42 @@
   <div class="row-fluid">
 
     <div class="span3">
-      <%= render :partial => 'about/menu'%>
+      <%= render :partial => 'about/menu' %>
     </div>
 
 
     <!-- nested Fluid RIGHT -->
     <div class="row">
-      <div class="span7">
+      <div class="span8">
+        <h2>The Edward R. Murrow Papers, ca 1913-1985</h2>
 
+        <p>
+
+        <div id="static_thumbnail">
+          <ul class="thumbnails ">
+            <li class="span3">
+              <div class="thumbnail">
+                <a href="#"><img src="/assets/img/youngmurrow.jpg" alt=""></a>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        The Edward R. Murrow Papers, ca 1913-1985, housed at the Digital Collections and Archives, Tufts University, is
+        the world's largest collection of Edward R. Murrow material. Dating largely from 1934 to 1965, the 55 linear
+        feet of documents include correspondence, personal materials, work and activities-related files, and over 320
+        photographs. The papers also include about 1700 books, memorabilia as well as audiovisual material.</p>
+        <p>
+          You can read more about
+          <a href="#">Edward R. Murrow at The Life and Work of Edward R. Murrow: and Archives Exhibit</a>. You can read
+          more about both the digitized and non-digitized materials from the collection by reading the finding aid. Or
+          you can dive right into the <a href="#">digitized materials from the collection</a>, where we have
+          <a href="#">331 images </a>and<a href="#"> 574 transcribed audio recordings from episodes of This I
+          Believe</a>.</p>
+
+        <p>
+          For more information, or for access to non-digitized materials, <a href="#">contact DCA</a>.</p>
       </div>
     </div>
   </div>
