--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -12,6 +12,7 @@
   <link href="/assets/css/tdl-bootstrap-overrides.css" rel="stylesheet">
   <link href="/assets/css/facets.css" rel="stylesheet">
   <script src="/assets/js/jquery.js"></script>
+  <script src="/assets/javascripts/read_more_or_less.js"></script>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
