removed links since we won't have browse right away

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -16,8 +16,10 @@
         <div class="span9">
           <%= render :partial => "dca_text/collections" %>
         </div>
-        <div class="pull-right"><a href="#">
-          <h5>View more featured exhibits and collections <i class="icon-arrow-right margintoparrow"> </i></h5></a>
+        <div class="pull-right">
+          <!--
+          <a href="#"><h5>View more featured exhibits and collections <i class="icon-arrow-right margintoparrow"> </i></h5></a>
+          -->
         </div>
 
         <br/>
