--- a/public/assets/css/tdl-bootstrap-overrides.css
+++ b/public/assets/css/tdl-bootstrap-overrides.css
@@ -1043,7 +1043,7 @@ a.thumbnail:hover {
         border-top-width: 0;
         box-shadow: 0 1px 0 #FFFFFF inset, 0 1px 5px rgba(0, 0, 0, 0.1);
         left: 0;
-        position: fixed;
+      /*  position: fixed; */
         right: 0;
         top: 40px;
         z-index: 1020;
