TDLR-329 creating the text for the static pages

--- a/app/views/about/tufts_local_history.html.erb
+++ b/app/views/about/tufts_local_history.html.erb
@@ -32,62 +32,47 @@
           Tufts University or of the cities of Boston and Medford. Here are some entry points into our collections.</p>
 
         <p>The vast majority of our collections are not available online. If you want to research those collections,
-          please go to <a href="#">Research Help</a>.</p>
+          please go to <a href="http://sites.tufts.edu/dca/research-help/">Research Help</a>.</p>
         <h4>Photographs</h4>
         <ul>
-          <li><a href="#">Melville S. Munro’s photographs document Tufts from World War I through World War II.</a></li>
-          <li><a href="#">Edwin B. Rollins’ photographs document buildings on the Medford campus.</a></li>
-          <li><a href="#">The P.T. Barnum papers include images of Jumbo and Barnum Hall.</a></li>
-          <li><a href="#">Tom Hart's photographs depict campus and student life in the 60s, 70s and 80s.</a></li>
-          <li><a href="#">Jackson College photographs portray Jackson College students, activities, and events.</a></li>
-          <li><a href="#">Department of Athletics portray games and athletes.</a><br>
-          <li>
-            <a href="#">Facilities Management portray buildings, architectural drawings and construction on the Medford
-              campus.</a></li>
-          <li><a href="#"> Activities and Organizations portray Tufts activities and organizations</a></li>
-          <li><a href="#"> The University Photographs document Tufts since 2005</a></li>
-          <li><a href="#">The Bostonian Society photographs document the city of Boston from YEAR to YEAR</a></li>
-          <li><a href="#"> Photographs from The Jumbo features images from the Centennial supplement to the Tufts
-            undergraduate yearbook, published in 1952</a></li>
-          <li><a href="#">The MacJannett images our 725 photographs from the MacJannett family pictures, which include
-            images from the Tufts campus at Talloires</a></li>
-          <li><a href="#">The Pen, Paint, and Pretzels photographs show images from University dramatic productions</a>
-          </li>
-          <li><a href="#">Hundreds of photographs from the archives of the Tufts Daily are available online</a></li>
-
+          <li><a href="/catalog/tufts:UA069.001.DO.MS036">Melville Munro</a> was the University photographer documenting Tufts from World War I through World War II.</li>
+          <li><a href="/catalog/tufts:UA069.001.DO.MS156">Louise Young</li> was the University photographer documenting Tufts from 1947 until 1965.</li> 
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA206">The University Photography department</a> has documented Tufts since 2005</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS054">Edwin B. Rollins’ photographs</a> document buildings on the Medford campus.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS002">The P.T. Barnum papers</a> include images of Jumbo and Barnum Hall.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS093>Tom Hart's photographs</a> depict campus and student life in the 60s, 70s and 80s.</li>
+          <li><a href="/catalog/tufts:UA069.001.DO.UA033">Jackson College photographs</a> portray Jackson College students, activities, and events.</li>
+          <li>The <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA046">Department of Athletics papers</a> contains photographs that portray games and athletes.</li>
+          <li>The <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA021">Facilities Management papers</a> contains photographs that portray buildings, architectural drawings and construction on the Medford campus.</li>
+          <li>The <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA024">Activities and Organizations papers</a> contains photographs that portray Tufts activities and organizations.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog?f[object_type_facet][]=Images&q=%22Bostonian+society%22&search_field=all_fields&utf8=%E2%9C%93">The Bostonian Society photographs</a> document the city of Boston.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA065">Photographs from <cite>The Jumbo</cite></a> features images from the Centennial supplement to the Tufts undergraduate yearbook, published in 1952.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS024">The MacJannett papers</a> house 725 photographs from the MacJannett family pictures, which include images from the Tufts campus at Talloires.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UA068">The Pen, Paint, and Pretzels photographs</a> show images from University dramatic productions.</li>
+          <li><a href="/catalog/tufts:UA069.001.DO.UA176">Hundreds of photographs from the archives of the Tufts Daily</a> are available online</li>
         </ul>
         <h4>Periodicals</h4>
 
         <p>DCA collects all Tufts periodicals. Many of them have been digitized, and some of the digital periodicals are
           sampled here.</p>
         <ul>
-          <li><a href="#">The Tufts Daily is available online from YEAR to YEAR</a></li>
-          <li><a href="#">Outbreath, a literary magazine, has digitized copies from 2008 on</a></li>
-          <li><a href="#">Over 45 years worth of the medical school's yearbook, Caduceus, have been made available
-            online</a></li>
+          <li><a href="/catalog/tufts:UA069.001.DO.UA176"><cite>The Tufts Daily</cite></a> is available online from 1980 to 2009.</li>
+          <li><a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UP137"><cite>Outbreath</cite>, a literary magazine, has digitized copies from 2008 on.</li>
+          <li>Over 45 years worth of the medical school's yearbook, <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.UP150"><cite>Caduceus</cite></a>, have been made available online.</li>
 
         </ul>
         <h4>Other documents</h4>
         <ul>
+          <li>The online-only <a href="http://dev-dl.lib.tufts.edu/catalog/tufts:UA069.005.DO.00001"><cite>Concise Encyclopedia of Tufts History</cite></a> tells you about the history of Tufts, its traditions, events, buildings, and people. If there is no entry on the topic you’re researching, please <a href="/contact">let us know</a>. </li>
+          <li>In <a href="/catalog/tufts:UA069.005.DO.00003"><cite>Light on the Hill: A History of Tufts College, Volume I</cite> and <cite>Volume II</cite></a>, Russell Miller, Tufts’ first University Historian, chronicles the history of Tufts from its founding through the mid-1980s.  </li>
           <li>
-            <a href="#">The online-only Concise Encyclopedia of Tufts History tells you about the history of Tufts, its
-              traditions, events, buildings, and people. If there is no entry on the topic you’re researching, please
-              let us know. </a></li>
-          <li>
-            <a href="#">In Light on the Hill: A History of Tufts College, Volume I and Volume II, Russell Miller, Tufts’
-              first University Historian, chronicles the history of Tufts from its founding through the mid-1980s. </a>
-          </li>
-          <li>
-            <a href="#">High on the Hill, a pamphlet-style publication by the Alumni Council, presents Tufts traditions
-              and lore through a tour of its Medford campus. </a></li>
-          <li><a href="#">Check out historic snapshots of the Tufts Homepage since 1997, courtesy of Internet Archive,
-            Wayback Machine. </a></li>
-          <li><a href="#"> DCA is building a comprehensive history of Tufts people and offices
-          </a></li>
+            <a href="/catalog/tufts:UA069.005.DO.00014"><cite>High on the Hill</cite></a>, a pamphlet-style publication by the Alumni Council, presents Tufts traditions and lore through a tour of its Medford campus. </li>
+          <li>Check out <a href="http://wayback.archive.org/web/*/http://tufts.edu">historic snapshots of the Tufts Homepage since 1997</a>, courtesy of Internet Archive, Wayback Machine. </li>
+          <!-- <li>DCA is building <a href="#">a comprehensive history of Tufts people and offices</a>.</li> -->
         </ul>
         <h4>Further help</h4>
 
-        <p>For more information, or for access to non-digitized materials,<a href="#"> contact DCA</a>.
+        <p>For more information, or for access to non-digitized materials,<a href="/contact"> contact DCA</a>.
         </p>
       </div>
     </div>
