--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -14,7 +14,22 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-        <h2>Send Us Feedback</h2>
+  <p>The Tufts Digital Library welcomes and encourages your
+          questions, comments, and feedback. Your input is important to us
+          and contributes to the development of the TDL. Please contact us
+          in any of the following ways.</p>
+          
+          <h2>By mail, phone, or email:</h2>
+          
+          <p>Tufts Digital Library<br />
+          c/o Digital Collections and Archives<br />
+          Tisch Library Building<br />
+          35 Professors Row<br />
+          Medford, MA 02155<br />
+          dl_feedback@tufts.edu<br />
+          Phone: 617.627.3737</p>
+          
+          <h2>By feedback form:</h2>
 
         <% unless @errors.empty? %>
             <strong>Please fix the following form errors:</strong>
