--- a/app/views/about/murrow_collection.html.erb
+++ b/app/views/about/murrow_collection.html.erb
@@ -22,7 +22,7 @@
           <ul class="thumbnails ">
             <li class="span3">
               <div class="thumbnail">
-                <a href="#"><img src="/assets/img/youngmurrow.jpg" alt=""></a>
+                <a href="/catalog/tufts:UA069.001.DO.MS025"><img src="/assets/img/youngmurrow.jpg" alt="Young Edward R. Murrow on the telephone"></a>
 
               </div>
             </li>
@@ -35,14 +35,14 @@
         photographs. The papers also include about 1700 books, memorabilia as well as audiovisual material.</p>
         <p>
           You can read more about
-          <a href="#">Edward R. Murrow at The Life and Work of Edward R. Murrow: and Archives Exhibit</a>. You can read
-          more about both the digitized and non-digitized materials from the collection by reading the finding aid. Or
-          you can dive right into the <a href="#">digitized materials from the collection</a>, where we have
-          <a href="#">331 images </a>and<a href="#"> 574 transcribed audio recordings from episodes of This I
-          Believe</a>.</p>
+          <a href="http://dca.lib.tufts.edu/features/murrow/exhibit/">Edward R. Murrow at The Life and Work of Edward R. Murrow: and Archives Exhibit</a>. You can read
+          more about both the digitized and non-digitized materials from the collection by reading <a href="/catalog/ead/tufts:UA069.001.DO.MS025">the finding aid</a>. Or
+          you can dive right into the <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&search_field=all_fields&utf8=%E2%9C%93">digitized materials from the collection</a>, where we have
+          <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Images&search_field=all_fields&utf8=%E2%9C%93">331 images</a> and <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Audio&search_field=all_fields&utf8=%E2%9C%93">574 transcribed audio recordings from episodes of <cite>This I
+          Believe</cite></a>.</p>
 
         <p>
-          For more information, or for access to non-digitized materials, <a href="#">contact DCA</a>.</p>
+          For more information, or for access to non-digitized materials, <a href="/contact">contact DCA</a>.</p>
       </div>
     </div>
   </div>
