TDLR-329 creating the text for the static pages

--- a/app/views/about/a_new_nation_votes.html.erb
+++ b/app/views/about/a_new_nation_votes.html.erb
@@ -14,7 +14,24 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+          <p>"<a href="http://elections.lib.tufts.edu/">A New
+          Nation Votes: American Election Returns 1787-1825</a>"
+          is a searchable collection of election returns from the
+          earliest years of American democracy, developed in
+          conjunction with theAmerican Antiquarian Society, using data compiled by Philip J. Lampi over the past 50 years.</p>
+          
+          <p>The election
+          returns are searchable in their own <a
+          href="http://elections.lib.tufts.edu/">dedicated
+          portal</a>, which allows you to narrow down your search
+          by candidate, office, year, party, jurisdiction,
+          election type, and state or territory.</p>
 
+          <p><a
+          href="http://elections.lib.tufts.edu/about.html">Learn
+          more about the  election records project</a>. "A New
+          Nation Votes" was made possible with generous help from
+          the National Endowment for the Humanities.</p>
       </div>
     </div>
   </div>
