--- a/app/views/about/dagomba_dance_drumming.html.erb
+++ b/app/views/about/dagomba_dance_drumming.html.erb
@@ -14,7 +14,23 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
+          <p>The <a
+          href="https://wikis.uit.tufts.edu/confluence/display/DagombaDanceDrumming/">Dagomba
+          Dance-Drumming Project</a> is the result of a
+          collaboration between Tufts music professor David Locke
+          and the late Alhaji Abubakari Lunna, acclaimed expert
+          on Dagomba performing arts and culture. The two
+          collaborated to gather recordings, scores, and
+          translations of the dance drumming tradition of the <a
+          href="https://wikis.uit.tufts.edu/confluence/display/DagombaDanceDrumming/About+the+Dagomba">Dagomba
+          or Dagbamba people of the Dagbon kingdom in
+          Ghana</a>.</p>
 
+          <p>The <a
+          href="https://wikis.uit.tufts.edu/confluence/display/DagombaDanceDrumming/">Dagomba
+          Dance Drumming online exhibit</a> provides valuable
+          context and history, or you can dive right into the <a
+          href="/catalog?utf8=%E2%9C%93&q=dagomba&search_field=all_fields#">digitized audio and scores</a> in the collection.</p>
       </div>
     </div>
   </div>
