--- a/app/views/about/finding_aids.html.erb
+++ b/app/views/about/finding_aids.html.erb
@@ -15,9 +15,77 @@
     <div class="row">
       <div class="span7">
         <h2>Learn More about Finding Aids</h2>
+        <p>The Tufts Digital Library contains documents called
+        "finding aids" that describe the contents of archival
+        collections in order to assist researchers in
+        understanding our materials. Only some of DCA's holdings
+        are available digitally; in those cases, the finding aid
+        will link to the digital material. But the finding aids
+        also describe the archival materials which are not
+        available via the web, so researchers can better
+        determine if materials in our collections will be useful
+        to them.</p>
 
-        <p>A Finding Aid aids in the finding. More details to follow...</p>
+        <p>Most of our collection guides contain the following
+        elements:</p>
 
+        <dl>
+            <dt>Overview</dt>
+            <dd>This section of the collection guide includes
+            general information about the collection, including
+            the title, the call number used to identify it a DCA,
+            the size of the collection (quantity of physical and
+            digital materials), a brief introduction to the
+            creator as well as links to lengthier biographies or
+            histories of the creators, and a summary description
+            of what the collection contains.</dd>
+            <dt>Contents </dt>
+            <dd>The contents provides a summary of the contents of
+            the collection. This section may also include
+            comments on the arrangement of the collection and the
+            kinds of materials (such as correspondence or
+            diaries) that may found in it.</dd>
+            <dt>Series Description</dt>
+            <dd>This section provides a description of the made
+            arrangements of the materials in the collection as
+            well as links to more detailed descriptions and
+            content lists.</dd>
+            <dt>Names and Description</dt>
+            <dd>Subject headings, such as those found in a library
+            catalog, are provided for each collection. </dd>
+            <dt>Related Collections</dt>
+            <dd>Links to other collections which a researcher might
+            find of interest.</dd>
+            <dt>Access and Use</dt>
+            <dd>This section contains information regarding
+            restrictions on using the collection and any
+            important copyright information.</dd>
+            <dt>Administrative Notes</dt>
+            <dd>This section contains information regarding the
+            acquisition and processing of the collection, as well
+            as various other notes that may be of interest to
+            those who want to use the collection to conduct
+            research.</dd>
+            <dt>Detailed Contents List</dt>
+            <dd>Once you have entered a Series Description
+            section, you will have access to a detailed listing
+            of the contents of the collection. In most collection
+            guides, the detailed description will follow a
+            general order of: subgroup, series, and folder. The
+            box and folder number (which appear on the left-hand
+            side of the screen) are used to locate the materials.
+            If materials are available online they will be linked
+            from the detailed contents list. Note that not every
+            item in the archives is described individually. For
+            many collections, we simply have a description of the
+            folder (e.g. "Correspondence and Reports, 1958-59"),
+            rather than a listing of every item in that folder.
+            Although this section contains the actual inventory
+            to the contents of the collection, it is important to
+            read the front matter, too--especially the Historical
+            Note, Content Description, and Arrangement-to
+            understand the context of the items.</dd>
+          </dl>
       </div>
       <div id="breadcrumbdivider">&nbsp;</div>
 
@@ -25,8 +93,6 @@
     </div>
 
     <div class="span9">
-
-
     </div>
 
 
