--- a/app/views/about/wriston_collection.html.erb
+++ b/app/views/about/wriston_collection.html.erb
@@ -14,7 +14,19 @@
     <!-- nested Fluid RIGHT -->
     <div class="row">
       <div class="span7">
-
+          <p>The <a
+          href="http://dca.lib.tufts.edu/features/wriston/">Walter B. Wriston Archives</a> provides access to
+          hundreds of articles, speeches, photographs, and other
+          resources from Wriston’s prolific career as a banker
+          and former chairman of Citicorp. To learn more about
+          Walter B. Wriston, you can visit the <a
+          href="http://dca.lib.tufts.edu/features/wriston/">online
+          exhibit portal for the Walter B. Wriston archives</a>,
+          <a
+          href="dev-dl.lib.tufts.edu/catalog/tufts:UA069.001.DO.MS134">read more about the materials in the collection</a>, or just browse the <a
+          href="http://dev-dl.lib.tufts.edu/catalog?f[collection_facet][]=Walter+B.+Wriston+papers%2C+1918-2006&search_field=all_fields&utf8=%E2%9C%93">digital
+          objects from the Walter B. Wriston collection</a>
+          directly.</p>
       </div>
     </div>
   </div>
