--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -6,10 +6,9 @@
   <!-- nested row LEFT -->
   <div class="row-fluid">
 
-    <div class="span3"><p><h6></h6></p>
-
+    <div class="span3">
+      <%= render :partial => 'about/menu'%>
     </div>
-
 
     <!-- nested Fluid RIGHT -->
     <div class="row">
