based on conversation with Mike, merging the two separate contact pages

--- a/app/views/about/_menu.html.erb
+++ b/app/views/about/_menu.html.erb
@@ -2,7 +2,7 @@
 <ul class="nav nav-tabs nav-stacked">
   <% current_url =  request.env['PATH_INFO'] %>
   <li <%= current_url == "/about/index" ? "class=active_orange" : "" %>><a href="/about/index">About Us</a></li>
-  <li <%= current_url == "/about/contact" ? "class=active_orange" : "" %>><a href="/about/contact">Contact DCA</a></li>
+  <li <%= current_url == "/contact" ? "class=active_orange" : "" %>><a href="/contact">Contact DCA</a></li>
 </ul>
 
 <h6>Featured Exhibits and Collections</h6>
